--- a/agijagi/app/src/main/res/values/colors.xml
+++ b/agijagi/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
 
     <color name="jagi_inactive">#FFD9D9D9</color>
     <color name="jagi_black_42">#6B000000</color>
+    <color name="jagi_black_70">#B3000000</color>
     <color name="jagi_white_30">#4DFFFFFF</color>
 
     <color name="jagi_white">#4DFFFFFF</color>
