--- a/agijagi/app/src/main/res/values/array.xml
+++ b/agijagi/app/src/main/res/values/array.xml
@@ -76,4 +76,9 @@
         <item>래터링 + 이미지</item>
     </array>
 
+    <array name="product_list_status">
+        <item>판매</item>
+        <item>품절</item>
+    </array>
+
 </resources>
