--- a/agijagi/app/src/main/res/layout/fragment_search.xml
+++ b/agijagi/app/src/main/res/layout/fragment_search.xml
@@ -26,19 +26,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:boxStrokeColor="@color/jagi_brown"
             app:endIconDrawable="@drawable/search_24px"
             app:endIconMode="custom"
             app:endIconTint="@color/jagi_black_42"
             app:hintEnabled="false">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edittext_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="검색어를 입력하세요" />
+                android:hint="검색어를 입력하세요"
+                android:inputType="text|textPersonName" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
+            android:id="@+id/linearlayout_search_recent_searches"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -67,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal" />
 
 </LinearLayout>
