Design: 판매상품리스트 UI #81 리사이클러뷰 어댑터 작업 dropdownMenu 커스텀

--- a/agijagi/app/src/main/res/layout/item_product_list.xml
+++ b/agijagi/app/src/main/res/layout/item_product_list.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/jagi_white_30">
 
         <ImageView
             android:id="@+id/imageView_product_list_product"
@@ -66,6 +67,30 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dropdownmenu_product_list_status"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:endIconScaleType="fitEnd"
+            app:hintEnabled="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <AutoCompleteTextView
+                android:id="@+id/dropdownTextView_product_list_status"
+                android:layout_width="68dp"
+                android:layout_height="24dp"
+                android:drawablePadding="-24dp"
+                android:hint="상태"
+                android:inputType="none"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:textSize="10sp"
+                app:simpleItems="@array/product_list_status" />
+        </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
