--- a/agijagi/app/src/main/res/layout/fragment_ready_made_option.xml
+++ b/agijagi/app/src/main/res/layout/fragment_ready_made_option.xml
@@ -124,6 +124,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
+            android:id="@+id/image_button_ready_made_option_shopping_bag"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginStart="16dp"
@@ -131,6 +132,7 @@
             android:background="@drawable/shopping_bag_24px" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_ready_made_option_purchase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
